browser-extension/src/action.css
.bi {
  display: inline-block;
  vertical-align: -0.125em;
  fill: currentcolor;
}

#article-container,
#feed-container,
#action-selector-container {
  padding: 0.5rem;
}

#action-selector-container {
  max-width: 300px;
  padding: 0.5rem;
}

#action-selector-container .row {
  max-width: 280px;
}

body,
#loading-indicator {
  min-height: 350px;
  min-width: 300px;
}

